# resize-avatar

./: Cargo.toml
src/: main.rs
src/compress/: main.rs
src/crop/: main.rs
