[package]
name = "resize-avatar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "resize-avatar"
path = "src/resize/main.rs"

[[bin]]
name = "crop-avatar"
path = "src/crop/main.rs"

[[bin]]
name = "compress-img"
path = "src/compress/main.rs"

[dependencies]
glob = "0.3.0"
image = "0.24.2"
image_compressor = "1.2.2"
